Linky, datum aktualizace a jak pomoci

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@ Pro zájemce připojujeme další informace.
 
 <!-- Začátek aktualních inbformací -->
 
-# Aktuální situace na území České republiky
+# Aktuální situace na území České republiky (aktualizováno 20. března 2020)
 
 Česká republika je aktuálně 22. zemí na světě a 13. zemí v Evropě v žebříčku 
 států dle počtu výskytu nakažení koronavirem. Počet pacientů k pátečnímu ránu 
-vystoupal na číslo 774. Česko patří spolu s Itálií, Španělskem, Francií a 
-Německem k evropským zemím, kde byla zavedená celostátní karanténa.
+vystoupal na číslo [774](https://onemocneni-aktualne.mzcr.cz/covid-19).
+Česko patří spolu s Itálií, Španělskem, Francií a Německem k evropským zemím,
+kde byla zavedená celostátní karanténa.
 
 
 # Přehled přijatých opatření
@@ -69,7 +70,7 @@ infekčního onemocnění.
 praktickému lékaři (telefonicky nebo jinak vzdáleně), který nařídí 14denní 
 karanténu.
 * Je znovuzavedena vnitřní ochrana hranic s Německem a Rakouskem a tyto hranice je 
-možné překročit jen na 12 určených hraničních přechodech.
+možné překročit jen na [12 určených hraničních přechodech](https://www.mvcr.cz/clanek/mimoradne-opatreni-ministerstva-vnitra-o-docasnem-znovuzavedeni-ochrany-vnitrnich-hranic-ceske-republiky.aspx).
 
 
 ## Kulturní, sportovní a jiné akce
@@ -167,6 +168,35 @@ informují a zveřejní je na svých úředních deskách.
 elektronickým nebo písemným.
 
 <!-- Konec aktualních inbformací -->
+
+
+<!-- Začátek jak pomoci -->
+
+# Jak lze v současné situaci pomoci?
+
+Dobrovolnická pomoc patří mezi činnosti, na které se v době nouzového stavu a
+karantény vztahuje výjimka. V případě, že i vy chcete přispět svými silami
+ke zlepšení pohodlí lidí, kteří nemají k dispozici pomoc blízkých nebo známých,
+je nejefektivnější zapojit se do již organizované pomoci. Tu v současnosti nabízí
+celá řada institucí.
+
+Jako dobrovolník se můžete zapojit do řady činností:
+
+* Šití a distribuce roušek
+* Obstarávání nákupu
+* Hlídání dětí
+* Venčení psa
+
+[Formulář pro dobrovolníky v Praze](http://www.pomahamepraze.cz/)
+organizovaný MHMP, Červeným křížem a organizací Život 90
+
+[Formulář pro dobrovolníky v Brně](https://forms.office.com/Pages/ResponsePage.aspx?id=I0-QEdvw3EyW9zkL1V_O6D8O1KU1aE9JqHBLDDb_Ka5UMDNQSFJUREpERVRZMldQM0YxRE4yVkVKSiQlQCN0PWcu)
+Masarykova univerzita
+
+[Seznam organizací](https://www.irozhlas.cz/zpravy-domov/koronavirus-epidemie-pomoc-dobrovolnici_2003181416_pek)
+poskytujících dobrovolnickou pomoc, roušky, psychologickou pomoc a další
+
+<!-- Konec jak pomoci -->
 
 
 Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat.  
