--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ Pro zájemce připojujeme další informace.
 
 <!-- Začátek aktualních inbformací -->
 
-# Aktuální situace na území České republiky (aktualizováno 20. března 2020)
+# Situace na území České republiky
+
+**Aktualizováno 20. března 2020.**
 
 Česká republika je aktuálně 22. zemí na světě a 13. zemí v Evropě v žebříčku 
 států dle počtu výskytu nakažení koronavirem. Počet pacientů k pátečnímu ránu 
