--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ facebook:
 img: 'header/koronavirus-core.png'
 rbar:
    - video
+keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
 
 {% capture md %} 
