--- a/reseni/index.html
+++ b/reseni/index.html
@@ -9,6 +9,7 @@ facebook:
     profilePage: https://www.facebook.com/ceska.piratska.strana/
 rbar:
    - video
+keywords: pandemický, padnemicky plán, dostupnost léků, dostupnost roušek, ekonomické úlevy, mimořádné dávky, osvč, úvěr, nemocenská, ošetřovatelské volno, homeoffice, bezdomovci, lidé bez domova, exekuce
 ---
 
 {% capture md %} 
