--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@ Pro zájemce připojujeme další informace.
 
 
 
-Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat.  
+Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat. 
+Podněty shromažďuje <a href mailto:Zuzana Freitas Lopesová> <a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz" _top">Zuzana Freitas Lopes</a>
+</p>(asistentka poslankyně Olgy Richterové).
+Technické řešení: Jitka Novotná
 
 Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.** 
 {% endcapture %}
