--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Pro zájemce připojujeme další informace.
 Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat. 
 
 Podněty shromažďuje 
-<a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz">Zuzana Freitas Lopes</a>
-</p>(asistentka poslankyně Olgy Richterové).
+<a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz">Zuzana Freitas Lopesová</a>
+(asistentka poslankyně Olgy Richterové).
 Technické řešení: Jitka Novotná
 
 Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.** 
