--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ Podněty shromažďuje
 (asistentka poslankyně Olgy Richterové).
 Technické řešení: Jitka Novotná
 
-Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.** 
+Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
+Chcete dostávat newsletter věnovaný současnému dění? **[Přihlaste se k odběru](https://nalodeni.pirati.cz/news/list/58/)**. 
 {% endcapture %}
 
 <div class="row">
