--- a/reseni/index.html
+++ b/reseni/index.html
@@ -13,7 +13,7 @@ keywords: pandemický, padnemicky plán, dostupnost léků, dostupnost roušek, 
 ---
 
 {% capture md %} 
-## Dostupnost zdravotnického materiálu: 
+## Dostupnost zdravotnického materiálu 
 
 Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání.
 
@@ -21,7 +21,7 @@ Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranný
 * Podpořit kapacity výroby OOP v ČR, pokud je to možné.
 * Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model a zvážit oblasti, kde nošení roušky či jiný způsob zakrytí tváře bude povinné (úřady, MHD, supermarkety, a to jak pro občany tak pro zaměstnance)
 
-## Léky v lékárnách a nemocnicích:
+## Léky v lékárnách a nemocnicích
 
 Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností. 
 
