--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Podněty shromažďuje
 Technické řešení: Jitka Novotná
 
 Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
-Chcete dostávat newsletter věnovaný současnému dění? **[Přihlaste se k odběru](https://nalodeni.pirati.cz/news/list/58/)**. 
+Chcete dostávat newsletter věnovaný současnému dění? Po přihlášení do nalodění zvolte zasílání "mimořádného newsletteru". 
 {% endcapture %}
 
 <div class="row">
