--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@ Pro zájemce připojujeme další informace.
 
 Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat. 
 
-Podněty shromažďuje 
+Obsahová stránka a podněty:  
 <a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz">Zuzana Freitas Lopesová</a>
 (asistentka poslankyně Olgy Richterové).
+
 Technické řešení: Jitka Novotná
 
 Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
+
 [Mimořádný newsletter k aktuální situaci](https://nalodeni.pirati.cz/news/list/58/)
 {% endcapture %}
 
