--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
 
 {% capture md %} 
+<p id="en" style="text-align: right">
+<a href="/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/cz.png" alt="cz"></a>
+<a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
+</p>
+
 **Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
 
 Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.
