--- a/test/index.html
+++ b/test/index.html
@@ -95,7 +95,7 @@ Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirá
     <div class="medium-12 large-8 columns">
 
 		<!-- Article -->
-		<article itemtype="http://schema.org/BlogPosting" itemscope="">
+		<article itemtype="https://schema.org/BlogPosting" itemscope="">
 			<link itemprop="mainEntityOfPage" href="{{ page.url }}">
             {% capture content %} 
             {{ md | markdownify }} 
@@ -116,7 +116,7 @@ Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirá
 	</div>
 </div>
 
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
   <script type="text/javascript" src="/assets/wowslider/wowslider.js"></script>
   <script type="text/javascript" src="/assets/wowslider/sample/script.js"></script>
   <!-- End WOWSlider.com BODY section -->
