--- a/en/index.html
+++ b/en/index.html
@@ -7,6 +7,9 @@ ruce:
 rousky: 
     title: Making face masks
     id: "s-hsj4gTJPg"
+cisteni:
+    title: Péče o roušku
+    id: "dFCtLZNiYLo"
 facebook:
     profilePageName: Czech Pirate Party
     profilePage: https://www.facebook.com/ceska.piratska.strana/
@@ -80,6 +83,7 @@ Are you interested in what we do? **[Onboard](https://nalodeni.pirati.cz/) the P
   <div class="o-section-inner o-section-inner--rightBlock">
       {% include right-bar/bar_video.html video=page.ruce %}
       {% include right-bar/bar_video.html video=page.rousky %}
+      {% include right-bar/bar_video.html video=page.cisteni %}
   </div>
 </aside>
 	</div>
