--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ ruce:
 rousky: 
     title: Výroba roušek
     id: "s-hsj4gTJPg"
+cisteni:
+    title: Péče o roušku
+    id: "dFCtLZNiYLo"
 facebook:
     profilePageName: Česká pirátská strana
     profilePage: https://www.facebook.com/ceska.piratska.strana/
@@ -82,6 +85,7 @@ Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirá
   <div class="o-section-inner o-section-inner--rightBlock">
       {% include right-bar/bar_video.html video=page.ruce %}
       {% include right-bar/bar_video.html video=page.rousky %}
+      {% include right-bar/bar_video.html video=page.cisteni %}
   </div>
 </aside>
 	</div>
