--- a/index.html
+++ b/index.html
@@ -18,19 +18,11 @@ rbar:
    - video
 keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
-
-{% capture md %} 
+{% capture panel %} 
 <p id="en" style="text-align: right">
 <a href="/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/cz.png" alt="cz"></a>
 <a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
 </p>
-
-**Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
-
-Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.
-
-Nabízíme rozcestník, který vám hledání usnadní - najdete zde hlavní infolinky, důležité telefony na klíčové instituce, odkazy na krizové poradny, které nabízí pomoc a služby spojené s dopady nouzového stavu, odkazy na weby a facebookové stránky, které soustřeďují zájemce o pomoc nebo naopak nabídky pomoci.
-
 Pro zájemce připojujeme další informace.
 
 *Co na webu najdete?*
@@ -54,6 +46,18 @@ Technické řešení: Jitka Novotná
 Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
 
 [Mimořádný newsletter k aktuální situaci](https://nalodeni.pirati.cz/news/list/58/)
+
+{% endcapture %}
+{% capture md %} 
+
+
+**Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
+
+Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.
+
+Nabízíme rozcestník, který vám hledání usnadní - najdete zde hlavní infolinky, důležité telefony na klíčové instituce, odkazy na krizové poradny, které nabízí pomoc a služby spojené s dopady nouzového stavu, odkazy na weby a facebookové stránky, které soustřeďují zájemce o pomoc nebo naopak nabídky pomoci.
+
+
 {% endcapture %}
 
 <div class="row">
@@ -95,6 +99,7 @@ Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirá
 	<div class="medium-12 large-4 columns">
 <aside class="o-section">
   <div class="o-section-inner o-section-inner--rightBlock">
+    {{ panel | markdownify }} 
       {% include right-bar/bar_video.html video=page.ruce %}
       {% include right-bar/bar_video.html video=page.rousky %}
       {% include right-bar/bar_video.html video=page.cisteni %}
