--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ Nabízíme rozcestník, který vám hledání usnadní - najdete zde hlavní inf
             {% include page-header.html headline=page.title content=content %}
     </article>
     <!-- /Article -->    
+
+    <h2>Aktuálně</h2>
     <section class="o-section o-section--spaceBot">
       <div class="o-section-inner o-section-inner--leftBlock">
         {% for article in site.posts limit: 6 %}
