--- a/index.html
+++ b/index.html
@@ -20,26 +20,17 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
 {% capture panel %} 
 
-Pro zájemce připojujeme další informace.
+## Co na webu najdete?
 
-*Co na webu najdete?*
-
-- Aktuální situaci a přehled přijatých opatření
 - [**rozcestník**](/rozcestnik/) důležitých telefonních čísel a informačních webů
 - [**naše řešení**](/reseni/) - návrhy z pirátské dílny, jak by podle našeho názoru věci měly nebo mohly fungovat během krizového řízení státu
 - [**aktuality**](/aktuality/) - zprávy o tom, co podnikáme, a co se daří realizovat
-
-Aktuální situaci, kontakty i návrhy řešení budeme průběžně doplňovat. 
+- [Mimořádný newsletter k aktuální situaci](https://nalodeni.pirati.cz/news/list/58/)
+- Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
 
 Obsahová stránka a podněty:  
 <a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz">Zuzana Freitas Lopesová</a>
 (asistentka poslankyně Olgy Richterové).
-
-Technické řešení: Jitka Novotná
-
-Zaujalo vás, co děláme? **[Naloďte se](https://nalodeni.pirati.cz/) na pirátskou palubu.**
-
-[Mimořádný newsletter k aktuální situaci](https://nalodeni.pirati.cz/news/list/58/)
 
 {% endcapture %}
 {% capture md %} 
