--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ Nabízíme rozcestník, který vám hledání usnadní - najdete zde hlavní inf
     <aside class="o-section">
       <div class="o-section-inner o-section-inner--rightBlock">
 
-          <p id="en" style="text-align: right">
+          <div id="en">
           <a href="/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/cz.png" alt="cz"></a>
           <a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
-          </p>    
+          </div>    
 
           {% include right-bar/bar_video.html video=page.ruce %}
           {% include right-bar/bar_video.html video=page.rousky %}
