--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -5,7 +5,7 @@ layout: default
   <div class="row">
     <div class="c-top-sub-nav-inner columns" >
       <div class="c-top-sub-nav__header">
-        <h2 class="c-top-sub-nav__heading">Naše řešení dopadů pandemie COVID-19</h2>
+        <h2 class="c-top-sub-nav__heading">Naše řešení</h2>
       </div>
       <div class="c-top-sub-nav-divider">
       </div>
@@ -14,6 +14,7 @@ layout: default
         <li class="c-top-sub-nav__item "><a href="/komunalni-volby/mapa-zameru/">Ekonomika a finance</a></li>
         <li class="c-top-sub-nav__item "><a href="/komunalni-volby/mapa-zameru/">Dluhy, exekuce, insolvence</a></li>
         <li class="c-top-sub-nav__item "><a href="/komunalni-volby/mapa-zameru/">Sociální dopady</a></li>
+        <li class="c-top-sub-nav__item "><a href="/komunalni-volby/mapa-zameru/">Školství</a></li>
       </ul>      
     </div>
   </div>
@@ -22,7 +23,7 @@ layout: default
 <div class="pce-hero pce-hero--entry">
   <div class="pce-hero__content">
     <h1 class="o-section__heading l-program__heading">Naše řešení dopadů pandemie COVID-19</h1>
-    <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> ve <strnog>4 klíčových oblastech</strong>:</h2>
+    <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> v <strong>5ti klíčových oblastech</strong>:</h2>
   </div>
 </div>
 
@@ -76,6 +77,19 @@ layout: default
     </div>
 
   </div>
+  <div class="medium-6 large-3 columns">
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <svg width="100%" height="250px" viewBox="0 0 42 42" class="f-donut">
+          <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+          <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+          <path transform="translate(12,11) scale(.75)" d="M18 24h-12c-1.104 0-2-.896-2-2v-20c0-1.104.896-2 2-2h12c1.104 0 2 .896 2 2v20c0 1.104-.896 2-2 2zm1-5.083h-14v3.083c0 .552.449 1 1 1h12c.552 0 1-.448 1-1v-3.083zm-7 3c-.553 0-1-.448-1-1s.447-1 1-1c.552 0 .999.448.999 1s-.447 1-.999 1zm7-17h-14v13h14v-13zm-1-3.917h-12c-.551 0-1 .449-1 1v1.917h14v-1.917c0-.551-.448-1-1-1zm-4.5 1.917h-3c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h3c.276 0 .5.224.5.5s-.224.5-.5.5z"/>
+        </svg>
+      </div>
+      <h3><a href="">Školství</a></h3>
+    </div>
+
+  </div>  
 </div>
 
 <hr/>
@@ -127,7 +141,7 @@ layout: default
                 </table>
               </div>
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení k Zdravotnictív</a>
+                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení k zdravotnictví</a>
               </div>             
             </article>          
           </div>
@@ -189,7 +203,7 @@ layout: default
               </div>
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení k Ekonomice a financím</a>
+                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení ekonomiky a financí</a>
               </div>              
             </article>
           </div>
@@ -249,10 +263,11 @@ Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady prá
                     <tr><td>Vznik chráněného bankovního účtu</td></tr>
                   </tbody>
                 </table>                
-
-
-více zde
               </div>
+
+              <div class="pce-hero__cta">
+                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení exekucí</a>
+              </div>              
             </article>
           </div>
         </section>
@@ -313,10 +328,12 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
                     <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni.</td></tr>
                     <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi.</td></tr>
                   </tbody>
-                </table>                
-
-více zde
+                </table>
               </div>
+
+              <div class="pce-hero__cta">
+                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení sociálních dopadů</a>
+              </div>              
             </article>
           </div>
         </section>
