--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -109,9 +109,9 @@ layout: default
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Zdravotnictví</h2>
                 <p>Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání. Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.</p>
-                <!--<h5 class="l-prg__garant-name">xx <div class="l-kan__item-img l-prg__garant-img">
-                  <img src=".jpg" alt=""/>
-                </div></h5>-->
+                <h5 class="l-prg__garant-name">Olga Richterová <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://praha.pirati.cz/assets/a87286-8c58a605ad525dec81d619c9b346c61ff0b7af541ed367208a279b18a8ed9311.jpg" alt=""/>
+                </div></h5>
                 </div>
 
                 <div class="l-prg__stats columns medium-2">
@@ -168,9 +168,9 @@ layout: default
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Ekonomika a finance</h2>
                 <p>Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.</p>
-                <!--<h5 class="l-prg__garant-name">xx <div class="l-kan__item-img l-prg__garant-img">
-                  <img src=".jpg" alt=""/>
-                </div></h5>-->
+                <h5 class="l-prg__garant-name">Olga Richterová <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://praha.pirati.cz/assets/a87286-8c58a605ad525dec81d619c9b346c61ff0b7af541ed367208a279b18a8ed9311.jpg" alt=""/>
+                </div></h5>
                 </div>
 
                 <div class="l-prg__stats columns medium-2">
@@ -232,9 +232,9 @@ layout: default
                 <p>
 Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady práce, které v této chvíli nestíhají vyplácet příspěvky. Nadále upozorňujeme, že v regionech se silnou koncentrací dlužníků může dojít vlivem zhroucení černého pracovního trhu k masivním sociálním problémům, které mohou přerůst až v občanské nepokoje a rabování. Vládě České republiky doporučujeme, aby si pro tyto krizové případy přichystala plán a zároveň doporučujeme několik opatření, které by mohly eskalaci situace předejít.
                 </p>
-                <!--<h5 class="l-prg__garant-name">xx <div class="l-kan__item-img l-prg__garant-img">
-                  <img src=".jpg" alt=""/>
-                </div></h5>-->
+                <h5 class="l-prg__garant-name">Olga Richterová <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://praha.pirati.cz/assets/a87286-8c58a605ad525dec81d619c9b346c61ff0b7af541ed367208a279b18a8ed9311.jpg" alt=""/>
+                </div></h5>
                 </div>
 
                 <div class="l-prg__stats columns medium-2">
@@ -294,9 +294,9 @@ Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady prá
                 <h2 class="l-prg__card-title">Sociální dopady</h2>
                 <p>Souhlasíme s navrženým prodloužením ošetřovného. Zákonné změny jsme podpořili. 
 Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde jen o drobné přivýdělky. Tento typ smluv supluje v našem pracovněprávním systému zejména pracovní poměr na částečné úvazky. Jde například o učitele, asistenty pedagogů nebo studenty, kteří si přivydělávají během studia (platí z něj ubytování nebo kolejné a nyní jim hrozí ztráta bydlení), ale i třeba zaměstnance státního podniku Česká pošta.</p>
-                <!--<h5 class="l-prg__garant-name">xx <div class="l-kan__item-img l-prg__garant-img">
-                  <img src=".jpg" alt=""/>
-                </div></h5>-->
+                <h5 class="l-prg__garant-name">Olga Richterová <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="https://praha.pirati.cz/assets/a87286-8c58a605ad525dec81d619c9b346c61ff0b7af541ed367208a279b18a8ed9311.jpg" alt=""/>
+                </div></h5>
                 </div>
 
                 <div class="l-prg__stats columns medium-2">
