--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+
+
 <nav class="c-top-sub-nav">
   <div class="row">
     <div class="c-top-sub-nav-inner columns" >
@@ -21,6 +23,32 @@ layout: default
   </div>
 </nav>
 
+
+
+<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="/assets/wowslider/sample/styles/style.css" />
+
+<div class="row" style="text-align: center">
+
+    <!-- Start WOWSlider.com BODY section -->
+    <div id="wowslider-container">
+      <div class="ws_images"><ul>
+        <li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" title="" id="wows_0"/></a></li>
+        <li><a href="#"><img src="/assets/img/banners/co-delat.jpg" alt="You can add description to slides!" title="text" id="wows_1"/></a></li>
+        <li><a href="#"><img src="/assets/img/banners/dane.jpg" alt="" title="" id="wows_2"/></a></li>
+      </ul></div>
+      <div class="ws_bullets"><div>
+      <a href="#" title=""><img src="/assets/img/banners/osvc.png" alt=""/>1</a>
+      <a href="#" title="You can add description to slides!"><img src="/assets/img/banners/co-delat.jpg" alt="text"/>2</a>
+      <a href="#" title=""><img src="/assets/img/banners/dane.jpg" alt=""/>3</a>
+      </div></div>
+      <a href="#" class="ws_frame"></a>
+    </div>
+
+</div>
+
+
+
 <div class="pce-hero pce-hero--entry">
   <div class="pce-hero__content">
     <h1 class="o-section__heading l-program__heading">Naše řešení dopadů pandemie COVID-19</h1>
@@ -32,13 +60,7 @@ layout: default
   <div class="small-12 medium-2 medium-offset-1 columns">
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_ochranne_pomucky.png" class="f-donut" />
-
-        <svg width="100%" height="250px" viewBox="0 0 42 42" class="f-donut">
-          <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-          <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
-          <path transform="translate(12,11) scale(.75)" fill="#000" d="M296.58,39.1c.41,0,.82,0,1.24,0,3.69.3,6.26,1.6,9.14,4.61A11.4,11.4,0,0,0,311.33,47c1.63.76,2.2,1.14,1.94,1.27a26.74,26.74,0,0,1-7-.22,10.89,10.89,0,0,1-1.59-1.52,13.61,13.61,0,0,0-7.47-3.73c-4.37-.24-7.22,1.62-8.91,5.81-2.23,5.54-.87,9.65,4.59,13.85,1.35,1.05,4.14,3.05,6.19,4.46l1.21.85a22.58,22.58,0,0,1-5.79.61c-4.95-3.54-6.9-5.3-8.56-7.68-2.47-3.56-3-7.07-1.7-11.63,1.85-6.5,6.21-10,12.31-10Zm35.82,9.07.75,0a10.34,10.34,0,0,1,3.47.73c5.22,1.62,6.06,1.8,7.37,1.56a6.15,6.15,0,0,0,1.33-.4c.3-.15.55-.23.55-.18a19.64,19.64,0,0,1-1.4,3,14.13,14.13,0,0,1-5.66,5.82,8.23,8.23,0,0,1-4.39,1,18.23,18.23,0,0,1-2.07-.09l-.51-.09.36.41a15.82,15.82,0,0,1,1.69,2.55c1.13,2.1,2.19,2.9,3.37,2.55a2,2,0,0,1,.51-.13,12.9,12.9,0,0,1-1.9,1.25,7.94,7.94,0,0,1-5.27.62,12.51,12.51,0,0,1-5.08-3l-.87-.83v3.66a23.91,23.91,0,0,1-.76,7.59c-1.29,5.08-3.77,8.46-9.79,13.33-1.42,1.15-3.87,3-8.48,6.39-8.76,6.45-12.81,10.49-15.16,15.1l-.65,1.29-.32-1.17a44.82,44.82,0,0,0-6-12.86,36.11,36.11,0,0,0-6.93-7.39,15.9,15.9,0,0,1-5.09-6.13,24.49,24.49,0,0,1-2.13-7.12,38.16,38.16,0,0,1-.4-3.84c5.05,1.92,6.82,3.9,12.92,3.2-4.31-1.53-9.45-4.08-13-7.36,0-1.76.15-3.54.35-5.24.15-1.24.58-4,.64-4.09a5.5,5.5,0,0,1,.82.72,49.26,49.26,0,0,0,11.83,8.08c6.55,3,12.68,4,18.14,2.86a31.23,31.23,0,0,0,12-6A53.15,53.15,0,0,0,319,57.91a5.13,5.13,0,0,0,.68,1.2c2.36,3.85,8.76,3.36,10.51-.8a6.12,6.12,0,0,0-2.47-7.9,7.72,7.72,0,0,1,3.13-2,3.76,3.76,0,0,1,1.51-.28Zm-8.3,2,.25,0c4.83,0,6.11,7.41,1.58,9-4.51,2.23-8.87-4.35-5.16-7.67a4.68,4.68,0,0,1,3.33-1.37h0Zm-4.83,35.55a32.57,32.57,0,0,1,3.08,2.66c2.53,2.49,5.84,6.44,5.64,6.73-.07.09-.91.89-1.88,1.76-5,4.48-12.09,7.35-19.91,8.07a19.94,19.94,0,0,1-2.9.14c-.22-.13-.53-3.2-.69-6.15,5.53-4.39,11.65-8.29,16.66-13.21Zm10.45,11.61h.09a4.35,4.35,0,0,1,.92,1.27c.51.94.5,1.22-.11,2.26a14,14,0,0,1-2.46,2.7c-4.89,4.19-14.41,7.88-19.84,7.69-2.81-.09-4.22-.88-4.45-2.49l-.17-1.15,1.63-.09c8.54-.5,17.63-4.14,22.88-9.16a3.94,3.94,0,0,1,1.51-1Z"/>
-        </svg>        
+        <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />      
       </div>
       <h3><a href="">Zdravotnictví</a></h3>
     </div>    
@@ -46,7 +68,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a02_ekonomika.png" class="f-donut" />
+        <img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" />
       </div>
       <h3><a href="">Ekonomika a&nbsp;finance</a></h3>
     </div>
@@ -54,7 +76,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_ochranne_pomucky.png" class="f-donut" />
+        <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
       </div>
       <h3><a href="">Dluhy,&nbsp;exekuce, insolvence</a></h3>
     </div>
@@ -62,7 +84,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_soc_syst.png" class="f-donut" />
+        <img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" />
       </div>
       <h3><a href="">Sociální dopady</a></h3>
     </div>
@@ -70,7 +92,7 @@ layout: default
   <div class="small-12 medium-2 columns end">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_soc_syst.png" class="f-donut" />
+        <img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" />
       </div>
       <h3><a href="">Školství</a></h3>
     </div>
@@ -441,3 +463,8 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/assets/wowslider/wowslider.js"></script>
+<script type="text/javascript" src="/assets/wowslider/sample/script.js"></script>
